# workflowy-local-mcp

./: .gitignore  README.md  generate-icon.cjs  package-lock.json  package.json  tsconfig.json  upgrades.md
.github/workflows/: build.yml
mcp-server/: server.ts
shared/: accounts.ts  constants.ts
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/services/: updater.ts
tests/: accounts.test.ts
