[package]
name = "workflowy-local-mcp"
version = "1.4.2"
description = "Workflowy MCP Server Desktop App"
authors = ["Rodolfo Terriquez"]
edition = "2021"

[lib]
name = "workflowy_local_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["image-png"] }
tauri-plugin-opener = "2.5"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5"
tauri-plugin-updater = "2.10"
reqwest = { version = "0.12.26", features = ["rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-process = "2.3.1"
